# labs_graphics

Lab1/: CMakeLists.txt  Questions.txt  lab1-1.cpp  lab1-2.cpp  lab1-3.cpp  lab1-3_fs.glsl  lab1-3_vs.glsl  lab1-4.cpp  lab1-4_fs.glsl  lab1-4_vs.glsl  lab1-5.cpp  lab1-5_fs.glsl  lab1-5_vs.glsl  lab1-6.cpp  lab1-6_fs.glsl  lab1-6_vs.glsl  lab1-7.cpp  lab1-7_fs.glsl  lab1-7_vs.glsl
Lab2/: CMakeLists.txt  Questions.txt.txt  brfd_1dgraph.py  lab2-1.cpp  lab2-1_fs.glsl  lab2-2.cpp  lab2-2_fs.glsl  lab2-2_vs.glsl  lab2-3.cpp  lab2-3_fs.glsl  lab2-3_vs.glsl  lab2-4.cpp  lab2-4_fs.glsl
Lab3/: CMakeLists.txt  lab3-1.cpp  lab3-1_fs.glsl  lab3-1_vs.glsl  lab3-2.cpp  lab3-2_fs.glsl  lab3-3.cpp  lab3-3_fs.glsl  lab3-3_vs.glsl  lab3-5.cpp  lab3-5_tc.glsl  lab3-5_te.glsl  lab3-5_vs.glsl
Lab4/: CMakeLists.txt  Questions.txt.txt  lab4-1.cpp  lab4-1_fs.glsl  lab4-2.cpp  lab4-2_fs.glsl  lab4-3.cpp  lab4_vs.glsl
